Box selection bug with armatures #41128

Closed
opened 2014-07-19 16:30:15 +02:00 by Karja Krähwald · 10 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 2.71 release & e0d8e62

Short description of error
If an armature (object mode) was your last selected object, box selection cant capture its children or objects that were former children of this armature.

Exact steps for others to reproduce the error
Selectionbug.blend

  • Create an Armature.
  • Create any other objects and parent them to Armature.
  • Deselect all objects, then select Armature only.
  • Deselect all once again (A).
  • Try to box-select (B) all objects.

Problem: Only Armature can be selected.
I have to select other items than the armature in my scene first to reset this behaviour.

Note: Newly created objects arent affected.
But if I parent them to the armature, they are marked for this bug, apparently forever.
Parent deletion/change or reloading file didnt help.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 2.71 release & e0d8e62 **Short description of error** If an armature (object mode) was your last selected object, box selection cant capture its children or objects that were former children of this armature. **Exact steps for others to reproduce the error** [Selectionbug.blend](https://archive.blender.org/developer/F98532/Selectionbug.blend) - Create an Armature. - Create any other objects and parent them to Armature. - Deselect all objects, then select Armature only. - Deselect all once again (A). - Try to box-select (B) all objects. Problem: Only Armature can be selected. I have to select other items than the armature in my scene first to reset this behaviour. Note: Newly created objects arent affected. But if I parent them to the armature, they are marked for this bug, apparently forever. Parent deletion/change or reloading file didnt help.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Bastien Montagne was assigned by Sergey Sharybin 2014-07-19 23:10:19 +02:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

@mont29, i know you love armatures :)

@mont29, i know you love armatures :)

Added subscriber: @zeauro

Added subscriber: @zeauro

It seems that box-select is working in wireframe mode.

It seems that box-select is working in wireframe mode.

Can confirm that… Would bet yet another zbuf issue or something like that! :P

Can confirm that… Would bet yet another zbuf issue or something like that! :P

This issue was referenced by 6a43ee6e38

This issue was referenced by 6a43ee6e387824350f89e77f33c8907ff21d64ef

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6a43ee6e38.

Closed by commit 6a43ee6e38.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41128
No description provided.